--- a/plugins/credits/package.json
+++ b/plugins/credits/package.json
@@ -3,13 +3,12 @@
   "version": "1.0.0",
   "type": "module",
   "description": "Credits plugin for AdminDo dashboard",
-  "main": "index.js",
+  "module": "index.js",
   "exports": {
     ".": "./index.js"
   },
   "scripts": {
-    "build": "echo 'No build step needed for pure web components'",
-    "test": "echo 'No tests specified'"
+    "build": "echo 'No build step needed for pure web components'"
   },
   "keywords": [
     "admindo",
@@ -18,11 +17,14 @@
     "web-components",
     "esm"
   ],
-  "author": "",
+  "authors": [
+    {
+      "name": "Ben Allfree",
+      "url": "https://x.com/benallfree"
+    }
+  ],
   "license": "MIT",
   "peerDependencies": {
-    "admindo": "^1.0.0"
-  },
-  "dependencies": {},
-  "devDependencies": {}
+    "admindo": "^0.0.1"
+  }
 }
