--- a/plugins/about/package.json
+++ b/plugins/about/package.json
@@ -2,7 +2,7 @@
   "name": "admindo-plugin-about",
   "version": "0.0.1",
   "type": "module",
-  "description": "Author credits plugin for AdminDo dashboard",
+  "description": "Author credits plugin for AdminDO dashboard",
   "module": "src/index.js",
   "exports": {
     ".": "./src/index.js"
