--- a/plugins/dofs-browser/package.json
+++ b/plugins/dofs-browser/package.json
@@ -2,7 +2,7 @@
   "name": "admindo-plugin-dofs-browser",
   "version": "0.0.1",
   "type": "module",
-  "description": "Durable Objects File System GUI plugin for AdminDo dashboard",
+  "description": "Durable Objects File System GUI plugin for AdminDO dashboard",
   "module": "src/index.js",
   "exports": {
     ".": "./src/index.js"
