--- a/site/wrangler.jsonc
+++ b/site/wrangler.jsonc
@@ -3,27 +3,27 @@
  * https://developers.cloudflare.com/workers/wrangler/configuration/
  */
 {
-  "$schema": "../../node_modules/wrangler/config-schema.json",
-  "name": "admindo-durable-object-example",
+  "$schema": "../node_modules/wrangler/config-schema.json",
+  "name": "admindo-site",
   "main": "src/index.ts",
   "compatibility_date": "2025-05-04",
   "migrations": [
     {
       "new_sqlite_classes": ["MyDurableObject"],
-      "tag": "v1"
-    }
+      "tag": "v1",
+    },
   ],
   "durable_objects": {
     "bindings": [
       {
         "class_name": "MyDurableObject",
-        "name": "MY_DURABLE_OBJECT"
-      }
-    ]
+        "name": "MY_DURABLE_OBJECT",
+      },
+    ],
   },
   "observability": {
-    "enabled": true
-  }
+    "enabled": true,
+  },
   /**
    * Smart Placement
    * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
