--- a/site/package.json
+++ b/site/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "admindo-durable-object-example",
+  "name": "admindo-site",
   "version": "0.0.1",
   "private": true,
   "type": "module",
