update package versions to 0.0.1-rc.0

--- a/plugins/better-auth/package.json
+++ b/plugins/better-auth/package.json
@@ -1,6 +1,6 @@
 {
   "name": "admindo-plugin-better-auth",
-  "version": "0.0.1",
+  "version": "0.0.1-rc.0",
   "type": "module",
   "description": "Better authentication plugin for AdminDO dashboard",
   "module": "src/index.js",
