--- a/site/wrangler.jsonc
+++ b/site/wrangler.jsonc
@@ -4,7 +4,7 @@
  */
 {
   "$schema": "../node_modules/wrangler/config-schema.json",
-  "name": "admindo-site",
+  "name": "admindo",
   "main": "src/index.ts",
   "compatibility_date": "2025-05-04",
   "migrations": [
