remove ignored packages from changeset config

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -7,13 +7,5 @@
   "access": "public",
   "baseBranch": "main",
   "updateInternalDependencies": "patch",
-  "ignore": [
-    "admindo-basic",
-    "admindo-site",
-    "admindo-plugin-about",
-    "admindo-plugin-dterm",
-    "admindo-plugin-dorm",
-    "admindo-plugin-better-auth",
-    "admindo-plugin-dofs-browser"
-  ]
+  "ignore": []
 }
