--- a/site/package.json
+++ b/site/package.json
@@ -14,7 +14,8 @@
     "hono": "^4.7.8",
     "vite": "^6.3.5",
     "admindo": "workspace:*",
-    "admindo-plugin-about": "workspace:*"
+    "admindo-plugin-about": "workspace:*",
+    "admindo-plugin-dofs": "workspace:*"
   },
   "dependencies": {
     "dofs": "^0.0.1"
