--- a/plugins/auth/package.json
+++ b/plugins/auth/package.json
@@ -3,12 +3,21 @@
   "version": "0.0.1-rc.1",
   "type": "module",
   "description": "Superuser authentication plugin for AdminDO dashboard",
-  "module": "src/index.js",
   "exports": {
-    ".": "./src/index.js"
+    ".": {
+      "types": "./dist/client.d.ts",
+      "import": "./dist/client.js",
+      "default": "./dist/client.js"
+    },
+    "./server": {
+      "types": "./dist/server.d.ts",
+      "import": "./dist/server.js",
+      "default": "./dist/server.js"
+    }
   },
   "scripts": {
-    "build": "echo 'No build step needed for pure web components'"
+    "build": "tsup",
+    "dev": "tsup --watch"
   },
   "keywords": [
     "admindo",
@@ -28,5 +37,11 @@
   "license": "MIT",
   "files": [
     "src"
-  ]
+  ],
+  "devDependencies": {
+    "admindo": "workspace:*"
+  },
+  "dependencies": {
+    "hono": "^4.7.11"
+  }
 }
