--- a/site/package.json
+++ b/site/package.json
@@ -11,10 +11,12 @@
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "^1.2.2",
-    "hono": "^4.7.8",
-    "vite": "^6.3.5",
     "admindo": "workspace:*",
     "admindo-plugin-about": "workspace:*",
+    "admindo-plugin-auth": "workspace:*",
+    "admindo-plugin-dofs": "workspace:*",
+    "hono": "^4.7.8",
+    "vite": "^6.3.5",
     "vite-plugin-unpkg": "^0.0.2"
   },
   "dependencies": {
