--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "devDependencies": {
     "@changesets/cli": "^2.29.4",
     "prettier": "^3.5.3",
-    "prettier-plugin-organize-imports": "^4.1.0",
-    "serve": "^14.2.4"
+    "prettier-plugin-organize-imports": "^4.1.0"
   },
   "workspaces": [
     "admindo",
