--- a/plugins/about/package.json
+++ b/plugins/about/package.json
@@ -1,6 +1,6 @@
 {
   "name": "admindo-plugin-about",
-  "version": "0.0.2-rc.1",
+  "version": "0.0.2",
   "type": "module",
   "description": "Author credits plugin for AdminDO dashboard",
   "module": "src/index.js",
