--- a/site/wrangler.jsonc
+++ b/site/wrangler.jsonc
@@ -19,6 +19,10 @@
         "class_name": "MyDurableObject",
         "name": "MY_DURABLE_OBJECT",
       },
+      {
+        "class_name": "MyDurableObject2",
+        "name": "MY_DURABLE_OBJECT_2",
+      },
     ],
   },
   "observability": {
