feat: add hono.js support and compatibility to plugins

--- a/plugins/about/package.json
+++ b/plugins/about/package.json
@@ -5,7 +5,8 @@
   "description": "Author credits plugin for AdminDO dashboard",
   "module": "src/index.js",
   "exports": {
-    ".": "./src/index.js"
+    ".": "./src/index.js",
+    "./hono": "./src/hono.js"
   },
   "scripts": {
     "build": "echo 'No build step needed for pure web components'"
@@ -26,5 +27,8 @@
   "license": "MIT",
   "files": [
     "src"
-  ]
+  ],
+  "peerDependencies": {
+    "hono": "^4.0.0"
+  }
 }
